Fix alignment errors with the search and category fields in the e-commerce plugin.

--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -71,12 +71,8 @@
 // ------------------------------
 
 .product-filters .fieldset--search {
-
 	@media (max-width: 1024px) {
 		width: 100%;
-	}
-
-	@media (max-width: 1024px) {
 		padding: 20px 40px 10px;
 	}
 
@@ -172,7 +168,6 @@
 
 
     .button--submit {
-
         @media @tablet-horizontal {
             width: 50px;
             text-indent: -9999px;
